Added updates required for cors

--- a/tech/src/main/resources/application.properties
+++ b/tech/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 
 # Specify the PostgreSQL dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+client.app=https://localhost:6969
